--- a/08102022_VestForSeasons.html
+++ b/08102022_VestForSeasons.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>08102022_VestForSeasons</title>
+<title>You Asked, We Listened</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style>
 	body {
@@ -79,7 +79,7 @@
 	<table width="640" border="0" cellpadding="0" cellspacing="0" class="contenttable" align="center">
 		<!-- START PREHEADER -->
 		<tr>
-		  <td align="center" style="font-family:Verdana, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size:10px; line-height:18px; color:#474442;"> Customers love our Knit Denim Jeans
+		  <td align="center" style="font-family:Verdana, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size:10px; line-height:18px; color:#474442;"> Your favorite layer is now more refined
 			
 			<!-- Preheader white space hack -->
 			
